Add reset button

--- a/MIQ-Booking-Assistance/index.html
+++ b/MIQ-Booking-Assistance/index.html
@@ -48,6 +48,10 @@
     <input type="radio" id="accessibilityRoom_no" name="accessibilityRoom" checked>
     <label for="accessibilityRoom_no">No</label><br>
 </div>
+<hr/>
+<div>
+    <input type="button" id="reset-button" value="Restart Search">
+</div>
 </body>
 <script src="./renderer.js"></script>
 </html>
