Add refresh time

--- a/MIQ-Booking-Assistance/index.html
+++ b/MIQ-Booking-Assistance/index.html
@@ -47,6 +47,10 @@
     <label for="accessibilityRoom_yes">Yes</label><br>
     <input type="radio" id="accessibilityRoom_no" name="accessibilityRoom" checked>
     <label for="accessibilityRoom_no">No</label><br>
+
+    <br/>
+    <label for="refresh">Page Refresh Time (s):</label>
+    <input type="number" id="refresh" value="5">
 </div>
 <hr/>
 <div>
